# RGBCapture

./: CMakeLists.txt  Makefile  OPENCV_Test.py  README.md  RGBCapture.cpp  RGBCaptureAndDisplay.cpp  RGBCaptureAndSave.cpp  SDK_interface_test.py  cmake_install.cmake  gStreamerExample.py  rgb_start.sh
C-GStreamer/: Makefile  gStreamFLIR.c  readRaw.py
include/: image_utils.hpp
src/: RGBCaptureAndDisplay.cpp  RGBCaptureAndSave.cpp  image_utils.cpp
